--- a/Example/CLHelper/Info.plist
+++ b/Example/CLHelper/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App wants to access your GPS when it needs location</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Ap wants to access your location</string>
+    <key>NSContactsUsageDescription</key>
+    <string>Access Your Contacts</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -26,6 +24,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Ap wants to access your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App wants to access your GPS when it needs location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
