--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,4 @@
 language: swift
 osx_image: xcode9
 script:
-    - xcodebuild clean test -workspace Example/CLHelper.xcworkspace -scheme ClHelper -destination "platform=iOS Simulator,name=iPhone 7,OS=10.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
+    - xcodebuild clean test -workspace Example/CLHelper.xcworkspace -scheme ClHelper-Example -destination "platform=iOS Simulator,name=iPhone 7,OS=10.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
