--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+language: swift
+osx_image: xcode9
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CLHelper.xcworkspace -scheme CLHelper-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+    - xcodebuild clean test -workspace Example/CLHelper.xcworkspace -scheme ClHelper-Example -destination "platform=iOS Simulator,name=iPhone 7,OS=10.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
+    - pod lib lint
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
